# TaskTrecker

./: .black  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pre-commit  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 1f73f8d8f041_update_user_model.py  24e10db6dd3b_edit_user_model_delete_password_in_model.py  365c38eba66a_add_tasks_and_edit_user.py  455b206dd9d6_update_user_model.py  5587be0ef7b5_create_users_table_delete_password_hash.py  57a5df6b4a33_add_a_relationship_user_for_tasks.py  6f4ba17150bc_update_model.py  77b49e58720c_update_models.py  89325fdb61ec_update_user_model.py  9f48ab7e8426_add_password_for_user.py  b525ab74a868_update_user_model_with_fastapi_users.py  b60aadba521a_update_user_model.py  bf02a912bf54_create_users_table.py  f369610d6474_update_user_model.py  fc83ef15d85f_update_models.py
app/: __init__.py  exceptions.py  main.py
app/api/: tasks.py  users.py
app/api/core/: auth_settings.py  config.py
app/api/db/: database.py  models.py
app/api/endpoints/: __init__.py  tasks.py  users.py
app/api/schemas/: task.py  user.py
app/celery_tasks/: celery_worker.py  notifications.py
app/core/: __init__.py  auth_settings.py  config.py  logging_config.py
app/db/: __init__.py  database.py  models.py
app/monitoring/: metrics.py
app/schemas/: __init__.py  task.py  user.py
app/services/: __init__.py  task_service.py  user_service.py
monitoring/: prometheus.yml
tests/: conftest.py  test_tasks.py  test_users.py
